--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,19 @@
-# 忽略所有的 .log 文件
+
 *.log
 
-# 忽略所有的 .pyc 文件
+code_tutors/__pycache__
+tutorials/__pycache__
+tutorials/migrations/__pycache__
 *.pyc
 
-# 忽略虚拟环境文件夹
+
 venv/
 
-# 忽略数据库文件
+
 db.sqlite3
 
-# 忽略 IDE 配置文件
 .idea/
 .vscode/
 
-# 忽略编译文件
 *.o
 *.a
-
-tutorials/migrations/*
